ASSERTION FAILED: REGRESSION(r268052?): WTF::CompletionHandler<void ()>::~CompletionHandler(): Completion handler should always be called !m_function https://bugs.webkit.org/show_bug.cgi?id=217525 <rdar://problem/70147564>

Reviewed by Eric Carlson.

MediaRecorderPrivateWriter::flushCompressedSampleBuffers cannot take a completion handler since, on destruction
the underlying writer may not call the requestMediaDataWhenReadyOnQueue block.
Instead, for every fetchData call, we store the completion handler in m_fetchDataCompletionHandler.
MediaRecorder is making sure to not call fetchData until the previous one was done.
Then we can call flushCompressedSampleBuffers with a Function instead of a CompletionHandler.
Minor refactoring in fetchData to improve readability.

* platform/mediarecorder/cocoa/MediaRecorderPrivateWriterCocoa.h:
* platform/mediarecorder/cocoa/MediaRecorderPrivateWriterCocoa.mm:
(WebCore::MediaRecorderPrivateWriter::flushCompressedSampleBuffers):
(WebCore::MediaRecorderPrivateWriter::fetchData):
(WebCore::MediaRecorderPrivateWriter::completeFetchData):
(WebCore::MediaRecorderPrivateWriter::updateTimeCode): Deleted.


Canonical link: https://commits.webkit.org/230367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268358 268f45cc-cd09-0410-ab3c-d52691b4dbfc