Source/WebCore/platform/mediarecorder/cocoa/MediaRecorderPrivateWriterCocoa.h
@@ -102,10 +102,10 @@ private:
 
     void finishAppendingCompressedAudioSampleBuffers(CompletionHandler<void()>&&);
     void finishAppendingCompressedVideoSampleBuffers(CompletionHandler<void()>&&);
-    void flushCompressedSampleBuffers(CompletionHandler<void()>&&);
+    void flushCompressedSampleBuffers(Function<void()>&&);
 
     void finishedFlushingSamples();
-    void updateTimeCode();
+    void completeFetchData();
 
     bool m_hasAudio { false };
     bool m_hasVideo { false };
